style.css
html {
    background-color: #FBF8FA;
}

body{
    font-family: sans-serif;
    font: Arial;
    background-color: #FBF8FA;
}

#mainName{
    font-size: 48px;
    color: white;
}

#institution{
    font-size: 25px;
    color: white;
}
div.topBanner{
    background-image: url("background banner.jpg");
    height: 200px;
    width: 100%; 
}

div.intro{
    color: #353535;
    margin:0;
    padding:0;
    text-align:center;
}

#bio {
    width:49%;
    display:inline-block;
    padding:40px;
    box-sizing:border-box;
    -moz-box-sizing:border-box;
}

#portrait {
    padding:0;
    margin:0;
    width:49%;
    vertical-align:bottom;
}

nav{
    padding: 5px;
    border: 2px black solid;
    background-color: #333;
    list-style-type: none;
    overflow: auto;
}

li {
    float: left;
}

li a{
    display: inline-block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

li a:hover{
    background-color: #111;
}

